<resources>
    <string name="app_name">Inventory</string>
    <string name="btn_sell">Sell</string>
    <string name="quantity_txtv">Quantity:</string>
    <string name="price_txtv">Price:</string>
    <string name="Supplier_txtv">Supplier:</string>

    <string name="Category_txtv">Category:</string>
    <string name="category_fresh_food">Fresh Food</string>
    <string name="category_Frozen">Frozen</string>
    <string name="category_Diary">Diary Products</string>
    <string name="category_Poultry">Poultry</string>
    <string name="category_Beverages">Beverages</string>
    <string name="category_Miscellaneous">Miscellaneous</string>

    <string name="editor_insert_product_failed">Insertion failed</string>
    <string name="editor_insert_product_successful">Insertion succeeded</string>
    <string name="editor_update_product_failed">Update failed</string>
    <string name="editor_update_product_successful">Update succeeded</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all_products">Delete All</string>

    <string name="editor_activity_title_add">Add a Product</string>
    <string name="editor_activity_title_edit">Edit Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="cannot_sell">Quantity is not available</string>
    <string name="btn_order">Order</string>
    <string name="alert_dialog_order_quantity">Order Quantity</string>
</resources>
